--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pagina de prueba con Git</title>
 </head>
-            <form action="
-
-<!-- #region -->        "></form>
 <body>
+    <h1>Una prueba </h1>
+    
+</body>
+</html>
