--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Pagina de prueba con Git</title>
 </head>
 <body>
-    <h1>Una prueba </h1>
+    <h1>Mi promera pagina web </h1>
+    <p>ya esta online</p>
     
 </body>
 </html>
